[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUIs/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://World/Tutorial/TutorialPopup.gd" type="Script" id=3]
[ext_resource path="res://World/Tutorial/Tutorial.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Popup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -256.5
margin_top = -102.0
margin_right = 256.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 513.0
margin_bottom = 49.0
custom_constants/separation = 13

[node name="PreviousButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 250.0
margin_bottom = 49.0
rect_min_size = Vector2( 250, 0 )
text = "Previous"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 263.0
margin_right = 513.0
margin_bottom = 49.0
rect_min_size = Vector2( 250, 0 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" parent="." instance=ExtResource( 4 )]

[node name="CloseButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -180.0
margin_bottom = 49.0
rect_min_size = Vector2( 180, 0 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 15.0
margin_bottom = 41.0
text = "Label"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description1" type="Label" parent="."]
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.1
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -210.0
margin_right = 75.0
margin_bottom = 230.5
custom_fonts/font = SubResource( 1 )
text = "test font"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description2" type="Label" parent="."]
anchor_left = 0.9
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -210.0
margin_right = 75.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 1 )
text = "test font"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -477.0
margin_top = -130.5
margin_right = 477.0
margin_bottom = 130.5
text = "This Tutorial will show you
how to control the car
and
what all the in game pickups are
These pickups Are Random and no game
is the same!!"
align = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
